Añadido de librerias mediante la instalacion con npm install bootstrap jquery fontsawesome y mapeado en el angular.json de las mismas

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -11,6 +11,6 @@
   <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs">docs</a> will be your guide.</p>
   
 <button [routerLink]="['/login']" routerLinkActive="router-link-active" > Login</button>
-
+<button [routerLink]="['/admin']" routerLinkActive="router-link-active" > Admin</button>
 
 </ion-content>
