--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,86 +1,55 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-  <a class="navbar-brand" href="#">Admin panel</a>
-  <button
-    id="botonMenu"
-    class="navbar-toggler"
-    type="button"
-    data-toggle="collapse"
-    data-target="#navbarCollapse"
-    aria-controls="navbarCollapse"
-    aria-expanded="false"
-    aria-label="Toggle navigation"
-  >
+    <a class="navbar-brand" href="#">Admin panel</a>
+    <button id="botonMenu" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarCollapse">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#"
-          >Home <span class="sr-only">(current)</span></a
+    <div class="collapse navbar-collapse" id="navbarCollapse">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a
         >
       </li>
       <li class="nav-item"><a class="nav-link" href="#">Link</a></li>
-      <li class="nav-item dropdown">
-        <a
-          class="nav-link dropdown-toggle"
-          href="#"
-          id="navbarDropdown"
-          role="button"
-          data-toggle="dropdown"
-          aria-haspopup="true"
-          aria-expanded="false"
-        >
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Usuario
         </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <!-- <a class="dropdown-item" href="#">Ver</a> -->
-          <a class="dropdown-item" (click)="asignarOpcion('usuarioVer')" data-target="#navbarCollapse">Ver</a>
-          <a class="dropdown-item" (click)="asignarOpcion('usuarioAnadir')">Añadir usuario</a>
-          <a class="dropdown-item" (click)="asignarOpcion('usuarioAnadirTrabajo')">Añadir trabajo</a>
-          <a class="dropdown-item" (click)="asignarOpcion('usuarioModificar')">Modificar</a>
-          <a class="dropdown-item" (click)="asignarOpcion('usuarioBorrar')">Borrar</a>
-        </div>
-      </li>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <!-- <a class="dropdown-item" href="#">Ver</a> -->
+                    <a class="dropdown-item" (click)="asignarOpcion('usuarioVer')" data-target="#navbarCollapse">Ver</a>
+                    <a class="dropdown-item" (click)="asignarOpcion('usuarioAnadir')">Añadir usuario</a>
+                    <a class="dropdown-item" (click)="asignarOpcion('usuarioAnadirTrabajo')">Añadir trabajo</a>
+                    <a class="dropdown-item" (click)="asignarOpcion('usuarioModificar')">Modificar</a>
+                    <a class="dropdown-item" (click)="asignarOpcion('usuarioBorrar')">Borrar</a>
+                </div>
+            </li>
 
-      <li class="nav-item dropdown">
-        <a
-          class="nav-link dropdown-toggle"
-          href="#"
-          id="navbarDropdown"
-          role="button"
-          data-toggle="dropdown"
-          aria-haspopup="true"
-          aria-expanded="false"
-        >
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Trabajo
         </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Ver</a>
-          <a class="dropdown-item" href="#">Añadir</a>
-          <a class="dropdown-item" href="#">Modificar</a>
-          <a class="dropdown-item" href="#">Borrar</a>
-        </div>
-      </li>
-    </ul>
-    <form class="form-inline mt-2 mt-md-0">
-      <input
-        class="form-control mr-sm-2"
-        type="text"
-        placeholder="Search"
-        aria-label="Search"
-      />
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="#">Ver</a>
+                    <a class="dropdown-item" href="#">Añadir</a>
+                    <a class="dropdown-item" href="#">Modificar</a>
+                    <a class="dropdown-item" href="#">Borrar</a>
+                </div>
+            </li>
+        </ul>
+        <form class="form-inline mt-2 mt-md-0">
+            <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search" />
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
         Search
       </button>
-    </form>
-  </div>
+        </form>
+    </div>
 </nav>
 
 <div class="container" style="overflow-y: scroll; margin-top: 25px;">
-  <br />
-  <br />
+    <br />
+    <br />
 
-  <!-- <div class="jumbotron">
+    <!-- <div class="jumbotron">
     <h1>Navbar example</h1>
     <p class="lead">
       This example is a quick exercise to illustrate how fixed to top navbar
@@ -96,5 +65,5 @@
   </div> -->
 
 
-  <app-usuario *ngIf="this.opcionSeleccionada" [opcionUsuario]="opcionSeleccionada"></app-usuario>
+    <app-usuario *ngIf="opcionSeleccionada" [opcionUsuario]="opcionSeleccionada"></app-usuario>
 </div>
