--- a/src/app/admin/usuario/usuario.component.html
+++ b/src/app/admin/usuario/usuario.component.html
@@ -1,66 +1,65 @@
-
-
-
 <div *ngIf="opcionUsuario==='usuarioVer'">
     <div class="input-group mb-3">
         <!-- [(ngModel)]="terminoBusqueda" -->
-      <input type="text"  class="form-control"  #buscarTexto placeholder="Introduce nombre a buscar" aria-label="Recipient's username" aria-describedby="button-addon2">
-      <div class="input-group-append">
-        <button class="btn btn-outline-secondary" type="button" id="button-addon2" (click)="buscarUsuario(buscarTexto.value)">Buscar</button>
-      </div>
+        <input type="text" class="form-control" #buscarTexto placeholder="Introduce nombre a buscar" aria-label="Recipient's username" aria-describedby="button-addon2">
+        <div class="input-group-append">
+            <button class="btn btn-outline-secondary" type="button" id="button-addon2" (click)="buscarUsuario(buscarTexto.value)">Buscar</button>
+        </div>
     </div>
-    <div *ngFor="let item of usuariosFiltrados" class="card text-white bg-secondary mb-3" >
+    <div *ngFor="let item of usuariosFiltrados" class="card text-white bg-secondary mb-3">
         <div class="card-header">{{ item.nombre }}</div>
         <div class="card-body">
-          <h5 class="card-title">Secondary card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <button class="btn btn-primary" (click)="verUsuario(item)">Ver más...</button>
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <button class="btn btn-primary" (click)="verUsuario(item)">Ver más...</button>
         </div>
-      </div>
+    </div>
 
 </div>
 <!-- formulario para la creacion de usuario -->
 <div *ngIf="opcionUsuario==='usuarioAnadir'">
     <form>
         <div class="form-group">
-          <label for="exampleFormControlInput1">Email address</label>
-          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+            <label for="exampleInputNombre">Nombre</label>
+            <input type="email" class="form-control" id="exampleInputNombre" aria-describedby="ApellidosHelp" placeholder="Nombre">
         </div>
         <div class="form-group">
-          <label for="exampleFormControlSelect1">Example select</label>
-          <select class="form-control" id="exampleFormControlSelect1">
-            <option>1</option>
-            <option>2</option>
-            <option>3</option>
-            <option>4</option>
-            <option>5</option>
-          </select>
+            <label for="exampleInputApellidos">Apellidos</label>
+            <input type="email" class="form-control" id="exampleInputApellidos" aria-describedby="ApellidosHelp" placeholder="Apellidos">
         </div>
         <div class="form-group">
-          <label for="exampleFormControlSelect2">Example multiple select</label>
-          <select multiple class="form-control" id="exampleFormControlSelect2">
-            <option>1</option>
-            <option>2</option>
-            <option>3</option>
-            <option>4</option>
-            <option>5</option>
-          </select>
+            <label for="exampleInputEmail">Email</label>
+            <input type="password" class="form-control" id="exampleInputEmail" placeholder="Email">
         </div>
-        <div class="form-group">
-          <label for="exampleFormControlTextarea1">Example textarea</label>
-          <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+        <div class="row">
+            <div class="col-12">
+                <div class="list-group" id="list-tab" role="tablist">
+                    <a class="list-group-item list-group-item-action active" id="list-home-list" data-toggle="list" href="#list-home" role="tab" aria-controls="home">Home</a>
+                    <a class="list-group-item list-group-item-action" id="list-profile-list" data-toggle="list" href="#list-profile" role="tab" aria-controls="profile">Profile</a>
+                    <a class="list-group-item list-group-item-action" id="list-messages-list" data-toggle="list" href="#list-messages" role="tab" aria-controls="messages">Messages</a>
+                    <a class="list-group-item list-group-item-action" id="list-settings-list" data-toggle="list" href="#list-settings" role="tab" aria-controls="settings">Settings</a>
+                </div>
+            </div>
+            <div class="col-8">
+                <div class="tab-content" id="nav-tabContent">
+                    <div class="tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list">...</div>
+                    <div class="tab-pane fade" id="list-profile" role="tabpanel" aria-labelledby="list-profile-list">...</div>
+                    <div class="tab-pane fade" id="list-messages" role="tabpanel" aria-labelledby="list-messages-list">...</div>
+                    <div class="tab-pane fade" id="list-settings" role="tabpanel" aria-labelledby="list-settings-list">...</div>
+                </div>
+            </div>
         </div>
-      </form>
+    </form>
 </div>
 
 <div *ngIf="opcionUsuario=='usuarioAnadirTrabajo'">
     opcionUsuario=='usuarioAnadirTrabajo'
     <div class="input-group mb-3">
         <!-- [(ngModel)]="terminoBusqueda" -->
-      <input type="text"  class="form-control"  #buscarTextoAnadirTrabajoUsuario placeholder="Introduce nombre a buscar" aria-label="Recipient's username" aria-describedby="button-addon2">
-      <div class="input-group-append">
-        <button class="btn btn-outline-secondary" type="button" id="button-addon2" (click)="buscarUsuario(buscarTextoAnadirTrabajoUsuario.value)">Buscar</button>
-      </div>
+        <input type="text" class="form-control" #buscarTextoAnadirTrabajoUsuario placeholder="Introduce nombre a buscar" aria-label="Recipient's username" aria-describedby="button-addon2">
+        <div class="input-group-append">
+            <button class="btn btn-outline-secondary" type="button" id="button-addon2" (click)="buscarUsuario(buscarTextoAnadirTrabajoUsuario.value)">Buscar</button>
+        </div>
     </div>
 </div>
 
@@ -68,16 +67,16 @@
     opcionUsuario=='usuarioModificar'
     <div class="input-group mb-3">
         <!-- [(ngModel)]="terminoBusqueda" -->
-      <input type="text"  class="form-control"  #buscarTextoModificarUsuario placeholder="Introduce nombre a buscar" aria-label="Recipient's username" aria-describedby="button-addon2">
-      <div class="input-group-append">
-        <button class="btn btn-outline-secondary" type="button" id="button-addon2" (click)="buscarUsuario(buscarTextoModificarUsuario.value)">Buscar</button>
-      </div>
+        <input type="text" class="form-control" #buscarTextoModificarUsuario placeholder="Introduce nombre a buscar" aria-label="Recipient's username" aria-describedby="button-addon2">
+        <div class="input-group-append">
+            <button class="btn btn-outline-secondary" type="button" id="button-addon2" (click)="buscarUsuario(buscarTextoModificarUsuario.value)">Buscar</button>
+        </div>
     </div>
     <div *ngFor="let item of usuariosFiltrados" class="card text-white bg-secondary mb-3" style="max-width: 18rem;">
         <div class="card-header">{{ item.nombre }}</div>
         <div class="card-body">
-          <h5 class="card-title">Secondary card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
         </div>
     </div>
 </div>
@@ -86,16 +85,16 @@
     opcionUsuario=='usuarioBorrar'
     <div class="input-group mb-3">
         <!-- [(ngModel)]="terminoBusqueda" -->
-      <input type="text"  class="form-control"  #buscarTextoBorrarUsuario placeholder="Introduce nombre a buscar" aria-label="Recipient's username" aria-describedby="button-addon2">
-      <div class="input-group-append">
-        <button class="btn btn-outline-secondary" type="button" id="button-addon2" (click)="buscarUsuario(buscarTextoBorrarUsuario.value)">Buscar</button>
-      </div>
+        <input type="text" class="form-control" #buscarTextoBorrarUsuario placeholder="Introduce nombre a buscar" aria-label="Recipient's username" aria-describedby="button-addon2">
+        <div class="input-group-append">
+            <button class="btn btn-outline-secondary" type="button" id="button-addon2" (click)="buscarUsuario(buscarTextoBorrarUsuario.value)">Buscar</button>
+        </div>
     </div>
     <div *ngFor="let item of usuariosFiltrados" class="card text-white bg-secondary mb-3" style="max-width: 18rem;">
         <div class="card-header">{{ item.nombre }}</div>
         <div class="card-body">
-          <h5 class="card-title">Secondary card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
         </div>
     </div>
 </div>
