--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -14,10 +14,37 @@
             <a class="nav-item nav-link" id="nav-contact-tab" data-toggle="tab" href="#nav-contact" role="tab" aria-controls="nav-contact" aria-selected="false">Configuración</a>
         </div>
     </nav>
+
+    <!-- FICHADO -->
     <div class="tab-content" id="nav-tabContent">
         <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
+            <div class="form-group">
+                <label for="sel1">Selecciona trabajo:</label>
+                <select class="form-control" id="sel1">
+                  <option>1</option>
+                  <option>2</option>
+                  <option>3</option>
+                  <option>4</option>
+                </select>
+            </div>
+            <div class="card text-white bg-secondary mb-3" style="max-width: 20rem;">
+                <div class="card-header">header</div>
+                <div class="card-body">
+                    <h5 class="card-title">Secondary card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+            </div>
+
+            Mañana:
+            <p>Desde</p><input type="datetime">
+            <p>Desde</p><input type="datetime-local">
+            <p>Desde</p><input type="date">
+            <p>Desde</p><input type="time">
+
 
         </div>
+
+        <!-- USUARIO -->
         <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
             <form>
                 <div class="form-group">
